data-git/worldmodel/test/requirement-test-fluents.p.pddl.Maxplan.stderr

requirement-test-fluents.d.pddl: syntax error in line 3, ':FLUENTS':
requirement %s not supported by this IPP version :FLUENTS
